<resources>
    <string name="app_name">QuizApp</string>
    <string name="no_of_questions">No of questions</string>
    <string name="question_tv">QuestionTv</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="your_score_is">Your score is</string>
    <string name="restart_quiz">Restart Quiz</string>
    <string name="next">Next</string>
</resources>